Revision history for {{$dist->name}}

{{$NEXT}}

2.036000  2020-03-28 14:16:39-07:00 America/Los_Angeles
 - fix remove_columns shortcut to add the 'remove_columns' attribute
   in case it is missing (Karen Etheridge, #101)
 - Add support for query condition to results_exist() and
   results_exist_as_query() in Helper::ResultSet::Shortcut::ResultsExist
   (Daniel Böhmer, GH#102)

2.035000  2020-02-21 08:38:42-08:00 America/Los_Angeles
 - add remove_columns shortcut (Karen Etheridge, GH#100)

2.034002  2019-12-29 06:57:56-08:00 America/Los_Angeles
 - Fix results_exist again (Thanks Veesh Goldman!)

2.034001  2019-11-02 07:45:22-07:00 America/Los_Angeles
 - Fix results_exist (Thanks Peter Rabbitson!) (closes #54)

2.034000  2019-08-02 10:45:04-07:00 America/Los_Angeles
 - Added dt_SQL_subtract to ::DateMethods1
   (Thanks Thomas Klausner!) (closes GH#96)

2.033004  2018-01-26 09:33:20-08:00 America/Los_Angeles
 - Fix ::RemoveColumns and ::AutoRemoveColumns to not wreak havoc when select/as
   is used (Thanks Vladimir Melnik for test and ribasushi for hint at fix!)
 - Allow easily subclassing types to be skipped in ::ToJSON
   (Thanks Paul Williams!) (closes GH#79 and GH#80)

2.033003  2017-03-12 12:14:51-07:00 America/Los_Angeles
 - Stop depending on String::CamelCase (closes GH#81)

2.033002  2016-10-31 16:03:23-07:00 America/Los_Angeles
 - Fix ::ProxyResultSetMethod to work when calling ->update
   (Thanks for the report Ryan Voots!)
 - Fix a number of warnings induced by upcoming DBIC (Thanks ribasushi!)

2.033001  2016-08-22 22:09:34-07:00 America/Los_Angeles
 - Fix a strictness error in a deprecated module (Thanks Niko Tyni!)

2.033000  2016-07-03 22:02:03-07:00 America/Los_Angeles
 - Add ::Schema::Verifier::ColumnInfo (Thanks Wes Malone!) (Closes GH#67)
 - Uninserted rows do not set their storage value anymore
   (Thanks for the report Wes Malone!) (Closes GH#69)

2.032002  2016-05-24 10:00:16-07:00 America/Los_Angeles